--- a/package.json
+++ b/package.json
@@ -5,10 +5,27 @@
         "build": "vite build"
     },
     "devDependencies": {
-        "axios": "^0.27",
-        "laravel-vite-plugin": "^0.6.0",
+        "@vitejs/plugin-react": "^2.0.0",
+        "autoprefixer": "^10.4.2",
+        "laravel-vite-plugin": "^0.5.0",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "sass": "^1.54.0",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^2.2.4",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
+        "@reduxjs/toolkit": "^1.8.2",
+        "axios": "^0.27.2",
+        "dayjs": "^1.11.3",
+        "formik": "^2.2.9",
+        "framer-motion": "^6.5.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-icons": "^4.4.0",
+        "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
+        "ziggy-js": "^1.4.6"
     }
 }
